--- a/pom.xml
+++ b/pom.xml
@@ -20,13 +20,13 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.debug>true</maven.compiler.debug>
 
-        <spring-cloud.version>Brixton.SR5</spring-cloud.version>
+        <spring-cloud.version>Brixton.SR6</spring-cloud.version>
     </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.4.1.RELEASE</version>
+        <version>1.4.1.RELEASE</version>pom.xml:28
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
